fix overflow issue

--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -23,7 +23,7 @@
 #navbar-language-english {
   height: 100%;
   padding-left: 10px;
-}
+};
 
 .navbar-icon-container { 
   text-align: center;
@@ -69,16 +69,15 @@
   margin-top: 5px;
   overflow-y: visible;
   overflow-x: hidden;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   width: 100%;
+  position: relative;
+  padding-bottom: 3px;
+  padding-top: 5px;
 }
 
 @media only screen and (max-width: 1080px) and (min-width: 0px) {
-  .pitch {
-    grid-template-rows: 350px 350px 350px;
-  }
-
   .navbar {
-    grid-template-columns: 5% 20% 20% 20% 5% 23% 2%;
+    grid-template-columns: 0.1% 15% 15% 15% 15% 30% 1%;
   }
 }
