--- a/styles/_pitch.scss
+++ b/styles/_pitch.scss
@@ -52,7 +52,7 @@
     "pitch-entry-text pitch-entry-text";
 
   grid-template-columns: 25% 65%;
-  grid-template-rows: 15% 75%;
+  grid-template-rows: 25% 75%;
 }
 
 @media only screen and (min-width: 2800px) {
